<resources>
    <string name="app_name">MyotpGeneration</string>
    <string name="continue_text">Continue</string>
    <string name="text_91">+91</string>
    <string name="sms_server_address">http://sms.rightchoicesms.com/sendsms/sendsms.php?</string>
    <string name="sending_text">Sending..</string>
    <string name="json_response_null_message">Sending Fail. Please try again.</string>
    <string name="json_response_zero_message">Sending Fail</string>
    <string name="finish_text">Finish</string>
    <string name="verification_code">Verification Code</string>
    <string name="enter_your_number">Enter your number</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="phone_number_is_not_valid">Phone number is not valid</string>
    <string name="city">City</string>
    <string name="location">Location</string>
    <string name="save">Save</string>
    <string name="data_not_found">Data not found</string>
    <string name="xml_dir_location_sd_card">SmartCard</string>
    <string name="open_dialog">open dialog</string>
    <string name="server_full_address">http://rapidans.esy.es/demo/smartcard/smsxmldoc.php</string>
    <string name="logo">logo</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="got_it">Got it</string>
    <string name="register">Register</string>
    <string name="phone_icon">phone icon</string>
    <string name="otp_header">Otp has been sent to your mobile number</string>
    <string name="otp_header_1">Enter code which displayed in notification</string>
    <string name="resend_otp_info_text">Don\'t received OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="code_is_not_valid">Invalid Verification Code</string>
    <string name="verifying">Verifying..</string>
    <string name="enter_email_testing">Enter email (Testing)</string>
    <string name="terms_and_condition">terms and condition</string>
    <string name="i_agree_to_all">I agree to all</string>
    <string name="terms_condition_error_message">Please Agree all Terms and Condition</string>
    <string name="dialog_username">Username</string>
    <string name="enter_username">Enter Username</string>
    <string name="terms_and_condition_title">Terms and Conditions</string>
    <string name="terms_and_condition_message">Terms and conditions</string>
    <string name="agree_button_text">Agree</string>
    <string name="server_mail_url">http://www.targetsolutions.co/targetsolutions.co/jashma/main.php</string>
    <string name="send_mail_url">http://www.targetsolutions.co/targetsolutions.co/jashma/mailtest.php</string>
    <string name="vn_server_mail_url">http://www.vnurture.in/test/vnprojects/smartfuel/main.php</string>
    <string name="vn_send_mail_url">http://www.vnurture.in/test/vnprojects/smartfuel/mailtest.php</string>
    <string name="change">Change</string>
    <string name="show">Show</string>
    <string name="Search_app_text">Search</string>
    <string name="otp_mesage_start">आपके SmartFuel मोबाइल एप की ओटीपी</string>
    <string name="otp_message_complete">है।</string>
    <string name="otp_message_thank_you">धन्यवाद</string>
    <string name="otp_mesage_start_1">Your SmartFuel OTP is </string>
    <string name="otp_message_complete_1">. </string>
    <string name="otp_message_thank_you_1">Thank You</string>
    <string name="otp_received_shortly">Your OTP will be received shortly</string>
</resources>
