<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
            android:gravity="center"
             android:layout_gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/city"/>
        <Spinner
            android:layout_width="0dp"
            android:layout_weight="1.2"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:id="@+id/city_dialog_city"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:weightSum="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/location"/>
        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:id="@+id/city_dialog_location"/>
    </LinearLayout>

    <Button android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/Search_app_text"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@android:color/transparent"
        android:id="@+id/city_dialog_save_button"/>
</LinearLayout>